Доб. окно текущего растения и  таймслайдер

--- a/landscape_creator/landscape_creator/MainWindow.xaml
+++ b/landscape_creator/landscape_creator/MainWindow.xaml
@@ -42,8 +42,6 @@
         </Menu>
         <Grid Grid.Column="0" Grid.Row="2" Background="#FF60B9CE">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="150"/>
-                <ColumnDefinition Width="150"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="70"/>
             </Grid.ColumnDefinitions>
@@ -52,49 +50,8 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" Text="Время с момента посадки:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Grid Grid.Column="0" Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <TextBox Grid.Column="0" Margin="5,0"/>
-                <ComboBox Grid.Column="1" Margin="5,0">
-                    <ComboBoxItem Content="дней"/>
-                    <ComboBoxItem Content="месяцев"/>
-                    <ComboBoxItem Content="лет"/>
-                </ComboBox>
-            </Grid>
-            <TextBlock Grid.Column="1" Grid.Row="0" Text="Шаг:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Grid Grid.Column="1" Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <TextBox Grid.Column="0" Margin="5,0"/>
-                <ComboBox Grid.Column="1" Margin="5,0">
-                    <ComboBoxItem Content="дней"/>
-                    <ComboBoxItem Content="месяцев"/>
-                    <ComboBoxItem Content="лет"/>
-                </ComboBox>
-            </Grid>
-            <Image Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center" Source="Images/arrow_bottom_1.png" Margin="0,2,0,0"/>
-            <Grid Grid.Column="2" Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="30"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="30"/>
-                </Grid.ColumnDefinitions>
-                <Button Grid.Column="0" Background="Transparent" BorderThickness="0">
-                    <Image Source="Images/arrow_back.png"/>
-                </Button>
-                <Button Grid.Column="2" Background="Transparent" BorderThickness="0">
-                    <Image Source="Images/arrow_next.png"/>
-                </Button>
-                <Canvas Grid.Column="1" Height="3" Background="Black"/>
-            </Grid>
-            <TextBlock Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" Text="1"/>
-            <Grid Grid.Column="3" Grid.RowSpan="3" Margin="5">
+            <local:TimeSlider Grid.Column="0" Grid.RowSpan="3"/>
+            <Grid Grid.Column="1" Grid.RowSpan="3" Margin="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
