--- a/landscape_creator/landscape_creator/MainWindow.xaml
+++ b/landscape_creator/landscape_creator/MainWindow.xaml
@@ -15,10 +15,14 @@
             <Setter Property="Background" Value="White"/>
         </Style>
         <Style TargetType="MenuItem">
-            <Setter Property="Background" Value="#FF60B9CE"/>
+            <Setter Property="Background" Value="#FF104BA9"/>
+        </Style>
+        <Style x:Key="fontStyle1">
+            <Setter Property="Control.FontFamily" Value="Arial Narrow"/>
+            <Setter Property="Control.Foreground" Value="White"/>
         </Style>
     </Window.Resources>
-    <Grid x:Name="mainGrid">
+    <Grid x:Name="mainGrid" Style="{StaticResource fontStyle1}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="100"/>
@@ -28,7 +32,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="70"/>
         </Grid.RowDefinitions>
-        <Menu Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Background="#FF04819E">
+        <Menu Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Background="#FF052D6E" Style="{StaticResource fontStyle1}">
             <MenuItem Header="Файл">
                 <MenuItem Header="Создать новый проект"/>
                 <MenuItem Header="Открыть"/>
@@ -40,7 +44,7 @@
             </MenuItem>
             <MenuItem Header="Справка"/>
         </Menu>
-        <Grid Grid.Column="0" Grid.Row="2" Background="#FF60B9CE">
+        <Grid Grid.Column="0" Grid.Row="2" Background="#FF104BA9">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="70"/>
@@ -62,16 +66,16 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <Button Grid.Column="0" Grid.Row="1">
+                <Button Grid.Column="0" Grid.Row="1" x:Name="objBack">
                     <Image Source="Images/arrow_back.png"></Image>
                 </Button>
-                <Button Grid.Column="1" Grid.Row="0">
+                <Button Grid.Column="1" Grid.Row="0" x:Name="objTop">
                     <Image Source="Images/arrow_top.png"></Image>
                 </Button>
-                <Button Grid.Column="2" Grid.Row="1">
+                <Button Grid.Column="2" Grid.Row="1" x:Name="objNext">
                     <Image Source="Images/arrow_next.png"></Image>
                 </Button>
-                <Button Grid.Column="1" Grid.Row="2">
+                <Button Grid.Column="1" Grid.Row="2" x:Name="objBottom">
                     <Image Source="Images/arrow_bottom.png"></Image>
                 </Button>
             </Grid>
