--- a/landscape_creator/landscape_creator/TimeSlider.xaml
+++ b/landscape_creator/landscape_creator/TimeSlider.xaml
@@ -7,7 +7,12 @@
              mc:Ignorable="d" 
              d:DesignHeight="70">
     <UserControl.Resources>
-        <local:TimeConverter x:Key="timeConverter"/>
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="15"/>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="15"/>
+        </Style>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -20,7 +25,7 @@
             <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Grid.Row="0" Text="Время с момента посадки:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Label Grid.Column="0" Grid.Row="0" Content="Время с момента посадки:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Grid Grid.Column="0" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -33,7 +38,7 @@
                 <ComboBoxItem Content="лет"/>
             </ComboBox>
         </Grid>
-        <TextBlock Grid.Column="1" Grid.Row="0" Text="Шаг:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Label Grid.Column="1" Grid.Row="0" Content="Шаг:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Grid Grid.Column="1" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
